--- a/index/styles.css
+++ b/index/styles.css
@@ -1,4 +1,48 @@
-.img-fluid {
-    max-width: 100%;
-    height: auto;
+
+header {
+  background-color: #636253;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+footer {
+  background-color: #636253;
+  color: #fff;
+  border: 5px;
+  border-style: solid;
+  border-color: rgb(111, 0, 255);
+  text-align: center;
+  padding: 20px;
+  margin-left: 1px;
+  bottom: 0;
+  width: 100%;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+main {
+  padding: 1em;
+  overflow: hidden;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  
+}
+
+.image-container {
+  width: 30%;
+  float: left;
+  margin: 1%;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.image-container img {
+  width: 139px;
+  height: 139px;
+  object-fit: fill;
 }
