--- a/index/styles.css
+++ b/index/styles.css
@@ -24,6 +24,8 @@ header {
 
 .container {
   margin: 20px auto;
+  max-width: 1200px;
+    margin: 0 auto;
 }
 
 main {
@@ -35,6 +37,8 @@ main {
 .image-container {
   position: relative;
   overflow: hidden;
+  width: calc(33.33% - 20px); /* Adjust the width based on the desired spacing */
+  margin-bottom: 20px; /* Add margin between rows */
 }
 
 .image-overlay {
@@ -62,9 +66,10 @@ main {
   margin: 0;
 }
 
+/*Sets image dimensions*/
 img {
-  max-width: 100%;
-  height: auto;
+  max-width: 145.31px;
+  height: 145.31px;
 }
 
 .footer {
@@ -104,6 +109,7 @@ img {
 .nav-links {
   list-style: none;
   display: flex;
+  gap: 10px;
 }
 
 .nav-links li {
