--- a/index/styles.css
+++ b/index/styles.css
@@ -22,9 +22,19 @@ header {
   margin: 20px 0;
 }
 
+.page {
+  background-color: #5D5C61;
+}
+
 .container {
   margin: 10px auto;
   max-width: 1200px; 
+}
+
+.container-xl {
+  background-color: white;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 main {
@@ -94,6 +104,7 @@ img {
   color: #ffffff;
   padding: 15px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1%;
 }
 
 .logo {
