--- a/index/styles.css
+++ b/index/styles.css
@@ -119,7 +119,7 @@ body {
   align-items: end;
   padding-top: 1%;
   padding-left: 2%;
-  padding-right: 1%;
+  padding-right: 2%;
   flex-direction:column;
   padding-bottom: 3em;
   justify-content: space-between;
@@ -176,6 +176,7 @@ body {
   margin-bottom: 2em;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 .place-card-container {
   width: 300px;
