--- a/index/styles.css
+++ b/index/styles.css
@@ -12,7 +12,7 @@ body {
   text-decoration: none;
   text-transform: none;
   letter-spacing: normal;
-  line-height: 1.55;
+  line-height: 120%;
   color: #000000;
   background-color: #FFFFFF;
 }
@@ -28,7 +28,8 @@ body {
 }
 .landing-Page-Top-Container {
   width: 100%;
-  height: 600px;
+  /*height: 600px;*/
+  height: 50vw;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -39,16 +40,19 @@ body {
 .landing-Page-Navbar {
   background-color: #4c759e;
   color: #FFFFFF;
-  width: 100%;
+  width: 100vw;
   display: flex;
-  padding: 1%;
-  max-width: 100%;
+  max-width: 100vw;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 1%;
   position: fixed;
+  padding-top: 0.1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom: 0%;
 }
 .icon {
   width: 4%;
@@ -56,11 +60,13 @@ body {
   object-fit: contain;
 }
 .navtextleft {
-  font-size: 1.5em;
+  /*font-size: 1.5em;*/
+  font-size: 120%;
   color: #FFFFFF;
 }
 .navtextmiddle {
-  font-size: 1.7em;
+  /*font-size: 1.7em;*/
+  font-size: 150%;
   color: #FFFFFF;
   font-weight: bold;
 }
@@ -79,10 +85,14 @@ body {
 .nav-Links {
   list-style: none;
   display: flex;
-  gap: 10px;
+  /*gap: 10px;*/
+  gap: 1%;
 }
 .nav-Links li {
-  margin-right: 20px;
+  /*margin-right: 20px;*/
+  margin-right: 2vw;
+  align-self: center;
+  text-align: center;
 }
 .nav-Links a {
   text-decoration: none;
@@ -106,41 +116,60 @@ body {
   border: none;
   padding-top: 5%;
   padding-left: 1%;
-  border-radius: 50px;
+  /*border-radius: 50px;*/
+  border-radius: 2.604vw;
   padding-right: 1%;
   padding-bottom: 5%;
   background-color: #370511ff;
+  /*width: 16vw;
+  height: 4vh;*/
+  width: 16vw;
+  height: 8vh;
+  font-size: 1.3vw;
 }
 .landing-Page-Hero {
   flex: 1;
   width: 100%;
   display: flex;
-  max-width: 1000px;
+  /*max-width: 1000px;*/
+  max-width: 100vw;
   align-items: end;
   padding-top: 1%;
-  padding-left: 2%;
-  padding-right: 2%;
+  /*padding-left: 2%;
+  padding-right: 2%;*/
+  padding-left: 2vw;
+  padding-right: 8vw;
   flex-direction:column;
-  padding-bottom: 3em;
+  /*padding-bottom: 3em;*/
+  padding-bottom: 0%;
   justify-content: space-between;
   color: #ffffff;
-  margin-top: 6%;
+  margin-top: 14vh;
 }
 .landing-Page-Content-Container {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  width: fit-content;
+  /*width: 30vw;
+  height: 30vh;*/
 }
 .landing-Page-Text09 {
-  font-size: 2.5rem;
+  /*font-size: 2.5rem;*/
+  font-size: 2.6vw;
 }
 .landing-Page-Subheading {
-  font-size: 1.3rem;
+  /*font-size: 1.3rem;*/
+  font-size: 1.4vw;
   text-align: center;
 }
 .landing-Page-Text10 {
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding-top: 6%;
+  padding-bottom: 6%;
+  font-size: 1.2vw;
+}
+.landing-page-link01 {
+  display: contents;
 }
 
 
@@ -221,9 +250,7 @@ body {
   padding-bottom: 1em;
   background-color: #370511ff;
 }
-.landing-page-link01 {
-  display: contents;
-}
+
 
 
 
