--- a/index/styles.css
+++ b/index/styles.css
@@ -24,19 +24,24 @@ body {
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
-  background-color: #4c759e;
+  /*background-color: #4c759e;*/
+  background-image: url("Images/SpaceBackground.jpg");
+  object-fit: fill;
+  background-size: contain;
 }
 .landing-Page-Top-Container {
   width: 100%;
   /*height: 600px;*/
   height: 50vw;
-  min-height: 600px;
+  min-height: 280px;
   display: flex;
   flex-direction: column;
   background-size: cover;
   background-image: url("Images/LandingPage.JPG");
   object-fit: fill;
   background-position: 0% 40%;
+  padding-bottom: 5%;
+  border-bottom: #e41010;
 }
 .landing-Page-Navbar {
   background-color: #4c759e;
@@ -56,18 +61,21 @@ body {
   padding-bottom: 0%;
 }
 .icon {
-  width: 4%;
+  /*width: 4%;*/
+  width: 3.5vw;
   height: 100%;
   object-fit: contain;
 }
 .navtextleft {
   /*font-size: 1.5em;*/
-  font-size: 120%;
+  /*font-size: 120%;*/
+  font-size: 1.3vw;
   color: #FFFFFF;
 }
 .navtextmiddle {
   /*font-size: 1.7em;*/
-  font-size: 150%;
+  /*font-size: 150%;*/
+  font-size: 1.5vw;
   color: #FFFFFF;
   font-weight: bold;
 }
@@ -76,18 +84,21 @@ body {
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+  padding-top: 1%;
 }
 .landing-Page-Links-Container {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+  text-align: center;
 }
 .nav-Links {
   list-style: none;
   display: flex;
   /*gap: 10px;*/
   gap: 1%;
+  font-size: 1vw;
 }
 .nav-Links li {
   /*margin-right: 20px;*/
@@ -130,7 +141,7 @@ body {
 }
 .landing-Page-Hero {
   flex: 1;
-  width: 100%;
+  width: 100vw;
   display: flex;
   /*max-width: 1000px;*/
   max-width: 100vw;
@@ -172,10 +183,6 @@ body {
 .landing-page-link01 {
   display: contents;
 }
-
-
-
-
 .landing-page-main {
   width: 100%;
   display: flex;
@@ -187,8 +194,7 @@ body {
   padding-bottom: 5%;
   justify-content: flex-start;
   background-color:  #FFFFFF;
-  margin-left: 3%;
-  margin-right: 3%;
+  margin: 3%;
 }
 .landing-page-text15 {
   color: #595959;
@@ -296,6 +302,11 @@ main {
   justify-content: space-around;
   flex-wrap: wrap;
   background-color: #343a40;
+  margin: 3%;
+}
+
+.projects {
+  background-color: #e41010;
 }
 
 .image-container {
