--- a/index/styles.css
+++ b/index/styles.css
@@ -51,14 +51,16 @@ body {
   max-width: 100vw;
   align-items: center;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  /*justify-content: space-between;*/
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 1%;
+  /*margin-bottom: 1%;*/
   position: fixed;
-  padding-top: 0.1%;
+  padding-top: 1%;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 0%;
+  padding-bottom: 1%;
+  gap: 0%;
 }
 .icon {
   /*width: 4%;*/
@@ -69,22 +71,26 @@ body {
 .navtextleft {
   /*font-size: 1.5em;*/
   /*font-size: 120%;*/
-  font-size: 1.3vw;
+  font-size: 1.6vw;
   color: #FFFFFF;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
 }
 .navtextmiddle {
   /*font-size: 1.7em;*/
   /*font-size: 150%;*/
-  font-size: 1.5vw;
+  font-size: 2vw;
   color: #FFFFFF;
   font-weight: bold;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
 }
 .landing-Page-Right-Side {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  padding-top: 1%;
+  padding-top: 0%;
 }
 .landing-Page-Links-Container {
   display: flex;
@@ -92,17 +98,22 @@ body {
   flex-direction: row;
   justify-content: space-between;
   text-align: center;
+  
 }
 .nav-Links {
   list-style: none;
   display: flex;
   /*gap: 10px;*/
   gap: 1%;
-  font-size: 1vw;
+  font-size: 1.2vw;
+  padding-left: 0%;
+  align-items: center;
+  margin-bottom: 0%;
+  align-content: center;
 }
 .nav-Links li {
   /*margin-right: 20px;*/
-  margin-right: 2vw;
+  margin-right: 1vw;
   align-self: center;
   text-align: center;
 }
@@ -278,7 +289,7 @@ header {
   background-color: #343a40;
   color: #ffffff;
   text-align: center;
-  padding: 20px 0;
+  padding: 20px;
 }
 
 .text-center {
@@ -305,9 +316,10 @@ main {
   margin: 3%;
 }
 
+/*
 .projects {
   background-color: #e41010;
-}
+}*/
 
 .image-container {
   position: relative;
