--- a/index/styles.css
+++ b/index/styles.css
@@ -24,24 +24,22 @@ body {
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
-  /*background-color: #4c759e;*/
   background-image: url("Images/SpaceBackground.jpg");
   object-fit: fill;
   background-size: contain;
 }
 .landing-Page-Top-Container {
-  width: 100%;
-  /*height: 600px;*/
-  height: 50vw;
-  min-height: 280px;
+  width: 100vw;
+  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-size: cover;
   background-image: url("Images/LandingPage.JPG");
-  object-fit: fill;
+  background-repeat: no-repeat;
+  object-fit: contain;
   background-position: 0% 40%;
   padding-bottom: 5%;
-  border-bottom: #e41010;
 }
 .landing-Page-Navbar {
   background-color: #4c759e;
@@ -51,34 +49,26 @@ body {
   max-width: 100vw;
   align-items: center;
   flex-direction: row;
-  justify-content: space-evenly;
-  /*justify-content: space-between;*/
+  justify-content: space-between;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  /*margin-bottom: 1%;*/
   position: fixed;
-  padding-top: 1%;
+  padding: 1%;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 1%;
-  gap: 0%;
+  
 }
 .icon {
-  /*width: 4%;*/
   width: 3.5vw;
   height: 100%;
   object-fit: contain;
 }
 .navtextleft {
-  /*font-size: 1.5em;*/
-  /*font-size: 120%;*/
   font-size: 1.6vw;
   color: #FFFFFF;
   padding-bottom: 0%;
   margin-bottom: 0%;
 }
 .navtextmiddle {
-  /*font-size: 1.7em;*/
-  /*font-size: 150%;*/
   font-size: 2vw;
   color: #FFFFFF;
   font-weight: bold;
@@ -103,7 +93,6 @@ body {
 .nav-Links {
   list-style: none;
   display: flex;
-  /*gap: 10px;*/
   gap: 1%;
   font-size: 1.2vw;
   padding-left: 0%;
@@ -112,7 +101,6 @@ body {
   align-content: center;
 }
 .nav-Links li {
-  /*margin-right: 20px;*/
   margin-right: 1vw;
   align-self: center;
   text-align: center;
@@ -139,50 +127,41 @@ body {
   border: none;
   padding-top: 5%;
   padding-left: 1%;
-  /*border-radius: 50px;*/
   border-radius: 2.604vw;
   padding-right: 1%;
   padding-bottom: 5%;
   background-color: #370511ff;
-  /*width: 16vw;
-  height: 4vh;*/
   width: 16vw;
   height: 8vh;
   font-size: 1.3vw;
 }
 .landing-Page-Hero {
-  flex: 1;
+  flex: 2;
   width: 100vw;
+  height: 100vh;
   display: flex;
-  /*max-width: 1000px;*/
   max-width: 100vw;
+  max-height: 100vh;
   align-items: end;
   padding-top: 1%;
-  /*padding-left: 2%;
-  padding-right: 2%;*/
   padding-left: 2vw;
   padding-right: 8vw;
   flex-direction:column;
-  /*padding-bottom: 3em;*/
   padding-bottom: 0%;
   justify-content: space-between;
   color: #ffffff;
-  margin-top: 14vh;
+  margin-top: 20vh;
 }
 .landing-Page-Content-Container {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   width: fit-content;
-  /*width: 30vw;
-  height: 30vh;*/
 }
 .landing-Page-Text09 {
-  /*font-size: 2.5rem;*/
   font-size: 2.6vw;
 }
 .landing-Page-Subheading {
-  /*font-size: 1.3rem;*/
   font-size: 1.4vw;
   text-align: center;
 }
@@ -211,6 +190,7 @@ body {
   color: #595959;
   margin-left: 5%;
   margin-right: 5%;
+  text-align: center;
 }
 .landing-page-cards-container {
   width: 100%;
@@ -234,7 +214,7 @@ body {
 .place-card-image {
   width: 100%;
   height: 250px;
-  object-fit: cover;
+  object-fit: fill;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
@@ -256,6 +236,7 @@ body {
   font-size: 12px;
   max-width: 250px;
   margin-bottom: 2em;
+  text-align: center;
 }
 .outline-button-button {
   color: #ffffff;
@@ -314,6 +295,7 @@ main {
   flex-wrap: wrap;
   background-color: #343a40;
   margin: 3%;
+  margin-top: 5.5%;
 }
 
 /*
@@ -343,15 +325,16 @@ main {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
-
+/*
 .image-container:hover .image-overlay {
   opacity: 1;
-}
+}*/
 
+/*
 .image-overlay p {
   text-align: center;
   font-size: 18px;
-}
+}*/
 
 /*Sets image dimensions*/
 img {
